--- a/index.html
+++ b/index.html
@@ -10,8 +10,18 @@
 
 </header>
 <body>
+    <div class = "sidebar">
+        <h1>ISCG6420</h1>
+        <h3>Internet and Website Development</h3>
+        <p>IWD is a Level 6, second year course in the Bachelor of Computing System Graduate Program
+            Enrolled students will learn to develop sophisticated enterprise websites using core web technologies.
+            This includes HTML, CSS, JS,JQuerry, AJAX, XML and JSON.
+
+
+        </p>
+    </div>
     <div class = "content">
-        <img class="image-large" src ="" alt ="computing photo"/>
+        <img class="image-large" src ="./assets/computing.webp" alt ="computing photo"/>
         <h2> Web Development</h2>
         <p>Web development is the work involved in developing a website for the Internet or an intranet. It can range from developing a simple single static page of plain text to complex web applications, electronic businesses, and social network services.</p>
         <h2> Web Technologies</h2>
